daxil olma və çadtdırılma növü düzəldildi
